# MCP-Job-Recommendation-System

./: README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  jobs_api.py
