[project]
name = "job-recommendation-system-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=3.0.3",
    "langchain-groq>=1.1.3",
    "mcp[cli]>=1.28.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
